# memory-knowledge

./: .env.example  .env.local.example  .env.remote.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/commands/: review-fix-loop.md  verify-analysis.md  verify-plan.md
.github/workflows/: ci.yml
Tasks/actor-team-adaptation-v4/: analysis.md  plan.md
Tasks/analytics-tools/: analysis.md  plan.md
Tasks/azure-webapp-deploy/: plan.md
Tasks/batch-import-writes/: analysis.md  plan.md
Tasks/clarification-policy-learning-v4/: analysis.md  plan.md
Tasks/convergence-intelligence-v4/: analysis.md  plan.md
Tasks/current-pending-work-closure/: analysis.md  plan.md
Tasks/failure-mode-playbooks-v4/: analysis.md  plan.md
Tasks/fix-mcp-reconnect/: analysis.md  (+1 more)
docker/: entrypoint.sh  init-pg.sql
docs/: AGENT_INTEGRATION_SPEC.md  LLM_INTEGRATION_GUIDE.md  MCP_AGENTS_WORKFLOW_V4_INTEGRATION.md  WORKFLOW_FINDINGS_LLM_MANUAL.md  agent-retrieval-protocol.md  analysis-agent-retrieval-learning.md  analysis-tri-database-integration.md  backlog.md  remote-rollout-runbook.md  roadmap.md
migrations/: env.py  script.py.mako
tests/: test_actor_adaptation.py  test_analytics.py  test_auto_feedback.py  test_batch_summaries.py  test_chunk_builder.py  test_codex_auth.py  test_codex_mcp.py  test_config.py  test_entity_key.py  test_fan_out.py  test_git_clone.py  test_github_auth.py  test_guards.py  test_health.py  test_ingestion.py  test_intake_tools.py  test_job_worker.py  test_learning_loop.py  test_manifest_reader.py  test_parser_extraction.py  test_parser_factory.py  test_phase12_features.py  test_php_adapter.py  test_planning_tools.py  test_playbooks.py  test_prompt_classification.py  test_python_parser.py  test_repair_drift.py  test_rerank.py  test_triage_memory.py  test_triage_policy.py  test_workflow_findings.py  test_workflow_runs.py
(+142 files in other folders)
