[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-knowledge"
version = "0.1.0"
description = "Multi-model code intelligence MCP server"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0",
    "asyncpg>=0.30.0",
    "qdrant-client>=1.13.0",
    "neo4j>=5.28.0,<6.0.0",
    "pydantic>=2.11",
    "pydantic-settings>=2.0",
    "uvicorn[standard]>=0.30.0",
    "starlette>=0.40.0",
    "structlog>=24.0",
    "openai>=2.0.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[project.scripts]
memory-knowledge = "memory_knowledge.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
